compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__same_catch_all_bytes_are_redundant.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let bit_array = <<>>\n  case bit_array {\n    <<_:bytes>> -> <<>>\n    <<a:bytes>> -> a\n    _ -> <<>>\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  case bit_array {
    <<_:bytes>> -> <<>>
    <<a:bytes>> -> a
    _ -> <<>>
  }
}

----- WARNING
warning: Unreachable case clause
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<a:bytes>> -> a
  │     ^^^^^^^^^^^^^^^^

This case clause cannot be reached as a previous clause matches the same
values.

Hint: It can be safely removed.
